# MicroFrame

./: .coverage  .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: .buildinfo  api_overview.html  conf.py  examples.html  examples.rst  file_readers.utils.rst  genindex.html  index.html  index.rst  objects.inv  partialmdinclude.py  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: api_overview.doctree  environment.pickle  examples.doctree  file_readers.doctree  file_readers.utils.doctree  frame.doctree  index.doctree  install.doctree
docs/_build/html/: .buildinfo  api_overview.html  examples.html  file_readers.html  file_readers.utils.html  frame.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: frame.rst.txt  (+4 more)
docs/_sources/: examples.rst.txt  index.rst.txt  install.rst.txt
docs/_sources/api/: microframe_core.rst.txt
docs/api/: microframe_core.html  microframe_readers.html
file_readers/: readers.py
file_readers/utils/: csv_utils.py
frame/: indexers.py  manipulators.py  microframe.py  printers.py
microframe/: __init__.py
microframe/core/: indexers.py  manipulators.py  microframe.py  printers.py
microframe/file_readers/: readers.py
microframe/frame/: printers.py
microframe/readers/: __init__.py  readers.py
tests/test_core/: test_indexers.py  test_manipulators.py  test_microframe.py  test_printers.py
tests/test_file_readers/: test_readers.py
tests/test_frame/: test_indexers.py  test_manipulators.py  test_microframe.py  test_printers.py
(+7 files in other folders)
